--- a/src/IssueMainController.form
+++ b/src/IssueMainController.form
@@ -31,7 +31,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="f04cf" class="javax.swing.JLabel">
+          <component id="f04cf" class="javax.swing.JLabel" binding="titleLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -139,7 +139,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="cdd9" class="javax.swing.JTable" binding="table1" default-binding="true">
+              <component id="cdd9" class="javax.swing.JTable" binding="issuesTable">
                 <constraints/>
                 <properties/>
               </component>
@@ -211,7 +211,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="-"/>
             </properties>
           </component>
           <component id="3500e" class="javax.swing.JLabel">
