--- a/src/IssueCreateController.form
+++ b/src/IssueCreateController.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="IssueCreatePanel" layout-manager="GridLayoutManager" row-count="13" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="384"/>
+      <xy x="20" y="20" width="500" height="409"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -45,7 +45,7 @@
           <text value="Priority"/>
         </properties>
       </component>
-      <component id="a5ca4" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="a5ca4" class="javax.swing.JComboBox" binding="priorityComboBox">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -67,14 +67,6 @@
           <text value="Description"/>
         </properties>
       </component>
-      <component id="a1d5f" class="javax.swing.JTextArea" binding="descriptionTextArea">
-        <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="21de4" class="javax.swing.JLabel">
         <constraints>
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -88,7 +80,7 @@
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="-"/>
         </properties>
       </component>
       <component id="99957" class="javax.swing.JButton" binding="createIssueButton" default-binding="true">
@@ -122,6 +114,19 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
+      <scrollpane id="6ff72">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="a1d5f" class="javax.swing.JTextArea" binding="descriptionTextArea">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
