--- a/src/ProjectMainController.form
+++ b/src/ProjectMainController.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="ProjectMainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="689" height="456"/>
+      <xy x="20" y="20" width="689" height="576"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -169,9 +169,15 @@
           </component>
           <scrollpane id="60b97">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="200" height="300"/>
+                <preferred-size width="200" height="300"/>
+                <maximum-size width="200" height="300"/>
+              </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="99bf2" class="javax.swing.JList" binding="contributorList">
