--- a/src/LoginController.form
+++ b/src/LoginController.form
@@ -18,10 +18,10 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="User Id"/>
+          <text value="User Name"/>
         </properties>
       </component>
-      <component id="66f4f" class="javax.swing.JTextField" binding="useridTextField">
+      <component id="66f4f" class="javax.swing.JTextField" binding="userNameTextField">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
