--- a/src/IssueDetailController.form
+++ b/src/IssueDetailController.form
@@ -102,7 +102,11 @@
       </vspacer>
       <scrollpane id="a6cdb">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="700" height="500"/>
+            <preferred-size width="700" height="500"/>
+            <maximum-size width="700" height="500"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
