--- a/src/IssueDetailController.form
+++ b/src/IssueDetailController.form
@@ -384,14 +384,6 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="ce31e" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Selected Comment"/>
-                    </properties>
-                  </component>
                   <component id="9f00f" class="javax.swing.JLabel">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -468,6 +460,27 @@
                       </component>
                     </children>
                   </scrollpane>
+                  <grid id="f10ce" layout-manager="BorderLayout" hgap="0" vgap="0">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="90567" class="javax.swing.JLabel">
+                        <constraints border-constraint="West"/>
+                        <properties>
+                          <text value="SelectedComment"/>
+                        </properties>
+                      </component>
+                      <component id="6457b" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+                        <constraints border-constraint="East"/>
+                        <properties>
+                          <text value="Delete"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
                 </children>
               </grid>
               <component id="55728" class="javax.swing.JSeparator">
