--- a/src/RegisterController.form
+++ b/src/RegisterController.form
@@ -23,7 +23,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="User Id"/>
+          <text value="User Name"/>
         </properties>
       </component>
       <hspacer id="d7996">
